Fix flags alignment

--- a/manhaus.css
+++ b/manhaus.css
@@ -43,9 +43,6 @@ span.sub-title {
 
 .languages > div {
     text-align: center;
-}
-
-.languages > div {
     font-size: 30px;
     padding: 30px;
 }
